# ticketing-system-

./: .env.example  .gitignore  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
API/: models.py  routes.py
Agent/: config.py  conversational_agent.py  main.py  tools.py
agent/: _init.py  cli.py  config.py  conversational_agent.py  llm_client.py
api/: database.py  exception.py  init.py  main.py  middleware.py  routes.py
config/: _init__.py  settings.py
scripts/: run_tests.py  start_agent.py  start_api.py
tests/: __init.py  conftest.py  test_agent_tools.py  test_api.py  test_integration.py
